# EulerianFluidSim

./: .clang-format  .gitignore  CMakeLists.txt  README.md
gui/: gui.cc  gui.hh
notes/: bouyancy.md  mf_transition.md  vof.md
src/: const.hh  consts.hh  density_render.cc  density_render.hh  glad.c  glad.h  line_segment.hh  main.cc  renderer.cc  renderer.hh  streamline_renderer.cc  streamline_renderer.hh  triangle_mesh.cc  triangle_mesh.hh  vertex.hh
src/efsim/: advect.cc  advect.hh  div.cc  div.hh  mac.cc  mac.hh  scalar.cc  scalar.hh  sim.cc  sim.hh  utils.hh
src/gui/: controlpanel.hh  gui.cc  gui.hh
src/shaders/: default.frag  default.vert  streamline.frag  streamline.vert
